@@ -24,6 +24,7 @@ Alpha 0.1.8.11
   The old system where you could determine the direction a door would go by blocking the other directions will therefore ONLY work the first time you open a door. 
   After that it will ALWAYS go in that direction unless you change it via the GUI / Commands.
 - Removed NONE open direction option from the GUI + commands.
+- Updated database to v6. 
 
 Alpha 0.1.8.10
 - Fixed being able to modify properties of doors you have no access to via direct commands when using doorUIDs.
